--- a/css/page/_profile.scss
+++ b/css/page/_profile.scss
@@ -1,3 +1,28 @@
+//SCROLL BAR
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+    height:20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    // border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    // background:$blueJean-color; 
+    border:2px solid rgb(156, 161, 163);
+    // border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: $jet-color;
+  }
+
 .sideNavBar {
     width: 60px;
     background-color: $orangeYellowCrayola-color;
@@ -217,6 +242,7 @@ svg {
             border-radius: 20px;
             background-color: $magnoliaWhite-color;
             box-shadow: 0 2px 4px $platinum-color;
+            font-size:1.2em;
 
             p{
                 padding:5px 5px;
@@ -265,6 +291,8 @@ svg {
     img,
     p {
         display: inline-block;
+        width:90%;
+
     }
 
     img {
@@ -273,11 +301,11 @@ svg {
         float: left;
     }
 
-    p {
+    .qTitles {
         background-color: $platinum-color;
         border-radius: 20px;
         padding: 10px 15px;
-        width: 100%;
+        width: 90%;
         text-align: center;
 
     }
@@ -301,12 +329,24 @@ svg {
         margin: 10px;
         padding: 5px;
     }
+    .questionaireContainer{
+        p{
+            border: 4px solid $blueJean-color;
+            border-radius:20px;
+            width:90%;
+            padding:10px 5px;
+        }
+        overflow-y: scroll;
+        overflow-x: hidden;
+        height:500px;
+
+    }
 
     .media {
         border-radius: 20px;
         background-color: $maximumBluePurple-color;
         width: fit-content;
-        padding: 5px 20px;
+        padding: 0 20px;
         margin: 10px auto;
     }
 
@@ -335,7 +375,7 @@ svg {
             display: none;
         }
 
-        p {
+        .qTitles {
             width: 100%;
         }
 
