edits to result css

--- a/css/page/_result.scss
+++ b/css/page/_result.scss
@@ -31,7 +31,7 @@
         height: 300px;
         line-height: 120px;
         text-align: center;
-        background-color: gray;
+        background-color: lightblue;
         margin-right: 2px;
         padding: 20px;
         flex: 25%;
