--- a/css/styles.css
+++ b/css/styles.css
@@ -1884,7 +1884,7 @@ button {
   height: 300px;
   line-height: 120px;
   text-align: center;
-  background-color: gray;
+  background-color: lightblue;
   margin-right: 2px;
   padding: 20px;
   -webkit-box-flex: 25%;
