--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -17,7 +17,7 @@
         padding-left: 10px;
         border-radius: 10px;
         margin-bottom: 20px;
-        border: none;
+        border: 1px solid black;
         font-family: $quicksand-font;
         font-weight: 600;
         font-size: 15px;
