--- a/css/page/_settings.scss
+++ b/css/page/_settings.scss
@@ -1,6 +1,83 @@
-.settings{
+.settings {
+    position: relative;
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    flex-direction: row;
 
-    &-iframe{
+    .settings div {
         border-style: dotted;
+    }
+
+    &-iframe-1 {
+        margin: 10em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex: 1;
+        padding-left: 10em;
+        padding-right: 10em;
+
+        &__button {
+            margin-bottom: 2em;
+            background-color: $orangeYellowCrayola-color;
+            border: none;
+            border-radius: 10px;
+            padding: 10px;
+            font-family: $quicksand-font;
+            font-size: 20px;
+
+            &:hover {
+                background-color: $maximumBluePurple-color;
+            }
+        }
+    }
+
+    &-iframe-2 {
+        margin: 10em;
+        iframe{
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+
+/* mobile - starts at tablet size (1024px) */
+
+@media(max-width: 1024px) {
+    .settings {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+
+        .settings div {
+            border-style: dotted;
+        }
+    }
+
+    &-iframe-1 {
+        margin: 10em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex: 1;
+        padding-left: 10em;
+        padding-right: 10em;
+        flex-shrink: 2;
+        &__button {
+            margin-bottom: 2em;
+            width: 95%;
+            background-color: $orangeYellowCrayola-color;
+            border: none;
+            border-radius: 10px;
+            padding: 10px;
+            font-family: $quicksand-font;
+
+            &:hover {
+                background-color: $maximumBluePurple-color;
+            }
+        }
     }
 }
