--- a/css/styles.css
+++ b/css/styles.css
@@ -317,12 +317,8 @@
     width: 95%;
     padding: 5px;
   }
-<<<<<<< HEAD
-  .bubblesContainer, .mainA {
-=======
   .bubblesContainer,
   .mainA {
->>>>>>> 06980521bfd4d7ddd5d71490465969b184799209
     display: None;
   }
 }
@@ -367,12 +363,8 @@
     width: 95%;
     padding: 5px;
   }
-<<<<<<< HEAD
-  .bubblesContainer, .mainA {
-=======
   .bubblesContainer,
   .mainA {
->>>>>>> 06980521bfd4d7ddd5d71490465969b184799209
     display: None;
   }
 }
@@ -676,83 +668,44 @@
   }
 }
 
-body {
+.home-html {
+  height: 100vh;
+}
+
+.home-body {
   margin: 0px;
   padding: 0px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow: hidden;
+  background-image: url("../images/Group 11.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-attachment: fixed;
+  z-index: -100;
+  height: 100vh;
+  font-family: "Quicksand", sans-serif;
 }
 
-html {
-  scroll-behavior: smooth;
+.home-body .home-container {
+  position: relative;
 }
 
-.logo {
-  width: 10%;
+.home-body .text {
+  position: absolute;
+  margin-top: 300px;
+  margin-left: 40px;
+  color: black;
+  font-size: 35px;
 }
 
-.welcome-description {
-  font-size: 1.5em;
-}
-
-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-height: 8vh;
-  background-color: white;
-  font-family: 'Quicksand', sans-serif;
-  margin: 0;
-}
-
-.nav-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 30%;
-}
-
-.nav-links li {
-  list-style: none;
-}
-
-.nav-links a {
-  color: #7ea9a4;
-  text-decoration: none;
-  letter-spacing: 4px;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.welcome {
-  text-align: center;
-  color: white;
-  font-family: 'Quicksand', sans-serif;
-}
-
-h1 {
-  margin-top: 100px;
-  margin-bottom: 10px;
-  font-size: 50px;
-}
-
-h2 {
-  font-size: 20px;
-}
-
-.button {
+.home-body .text .button {
   text-align: center;
   margin-top: 30px;
+  background: none;
 }
 
-.btn {
+.home-body .text .btn {
   border: 1px solid black;
   background: none;
   padding: 10px 20px;
@@ -766,17 +719,17 @@ h2 {
   overflow: hidden;
 }
 
-.btn1,
-.btn2 {
+.home-body .text .btn1,
+.home-body .text .btn2 {
   color: black;
 }
 
-.btn1:hover,
-.btn2:hover {
+.home-body .text .btn1:hover,
+.home-body .text .btn2:hover {
   color: white;
 }
 
-.btn::before {
+.home-body .text .btn::before {
   content: "";
   position: absolute;
   left: 0;
@@ -788,32 +741,15 @@ h2 {
   transition: 0.8s;
 }
 
-.btn1::before,
-.btn2::before {
+.home-body .text .btn1::before,
+.home-body .text .btn2::before {
   top: 0;
   border-radius: 0 0 50% 50%;
 }
 
-.btn1:hover::before,
-.btn2:hover::before {
+.home-body .text .btn1:hover::before,
+.home-body .text .btn2:hover::before {
   height: 180%;
-}
-
-.home-body {
-  overflow: hidden;
-}
-
-.home-body .vector {
-  width: 40%;
-  z-index: 4;
-  margin-top: 200px;
-  background: none;
-}
-
-.home-body .bg {
-  height: 80%;
-  width: 1100px;
-  float: right;
 }
 
 .header {
@@ -840,7 +776,7 @@ h2 {
 .header .logo {
   display: block;
   float: left;
-  padding: 10px 100px;
+  padding: 10px 40px;
   text-decoration: none;
 }
 
@@ -925,8 +861,7 @@ h2 {
   top: 0;
 }
 
-/* 48em = 768px */
-@media (min-width: 48em) {
+@media (min-width: 800px) {
   .header li {
     float: left;
   }
@@ -940,6 +875,20 @@ h2 {
   }
   .header .menu-icon {
     display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .header .logo {
+    display: none;
+  }
+  .home-body {
+    background-color: #FDB9A9;
+    background-image: none;
+  }
+  .menu {
+    border-top: solid 2px white;
+    border-bottom: solid 2px white;
   }
 }
 
