Fixing scss issues

--- a/css/page/_about.scss
+++ b/css/page/_about.scss
@@ -23,7 +23,7 @@
     font-size: $navBartext-fontsize;
     background-color: $orangeYellowCrayola-color;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     width: 100%;
     top: 0;
     left: 0
