--- a/css/page/_features.scss
+++ b/css/page/_features.scss
@@ -25,20 +25,23 @@
         border: 1px solid $jet-color;
         text-align: center;
         img{
-            width:100%;
-            border-radius: 20px;
+            width:60%;
+            border-radius: 50%;
             box-shadow:0 2px 5px $jet-color;
+            padding: 8px;
+            border: 2px solid;
             // border: 1px solid $jet-color;
         }
     .ft{
-        top:200px;
-        left:-50px;
+        top:240px;
+        left:60px;
         font-size:1.2em;
         font-weight: bold;
-        padding:5px 10px;
+        padding:10px 10px;
         background-color: $platinum-color;
-        border-radius:20px;    
-    }
+        border-radius:20px;  
+        width:60%;  
+        }
     }
     .item:hover{
         box-shadow:2px 2px 10px $jet-color;
