--- a/css/page/_home.scss
+++ b/css/page/_home.scss
@@ -88,7 +88,10 @@
     position: fixed;
     width: 100%;
     z-index: 3;
-}f
+    margin-top:5px;
+
+
+}
 
 .header ul {
     margin: 0;
@@ -105,6 +108,7 @@
     text-decoration: none;
     font-size: 20px;
 }
+
 
 .header .logo {
     display: block;
