--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,35 @@
   background-color: #FFFAFF;
   font-family: "Quicksand", sans-serif;
   font-size: 16px;
+  margin-top: 120px;
+}
+
+.headerOther {
+  position: block;
+  padding: 0;
+  top: 0;
+}
+
+.headerOther .header {
+  left: 0;
+  background-color: #F2CD5D;
+  margin: 0;
+  top: 0;
+  position: absolute;
+  padding: 0;
+}
+
+.headerOther .header ul {
+  background-color: #F2CD5D;
+}
+
+.headerOther .header .logo {
+  padding: 0;
+}
+
+.headerOther .header .logo img {
+  width: 120px;
+  padding: 0 20px;
 }
 
 .title {
@@ -25,7 +54,7 @@
   font-size: 20px;
   background-color: #F2CD5D;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   width: 100%;
   top: 0;
   left: 0;
@@ -507,20 +536,23 @@
 }
 
 .featureContents .item img {
-  width: 100%;
-  border-radius: 20px;
+  width: 60%;
+  border-radius: 50%;
   -webkit-box-shadow: 0 2px 5px #302B27;
           box-shadow: 0 2px 5px #302B27;
+  padding: 8px;
+  border: 2px solid;
 }
 
 .featureContents .item .ft {
-  top: 200px;
-  left: -50px;
+  top: 240px;
+  left: 60px;
   font-size: 1.2em;
   font-weight: bold;
-  padding: 5px 10px;
+  padding: 10px 10px;
   background-color: #EAEAEA;
   border-radius: 20px;
+  width: 60%;
 }
 
 .featureContents .item:hover {
@@ -790,6 +822,7 @@
   position: fixed;
   width: 100%;
   z-index: 3;
+  margin-top: 5px;
 }
 
 .header ul {
