fixed question page

--- a/css/page/_question.scss
+++ b/css/page/_question.scss
@@ -51,7 +51,7 @@ button {
     margin-right: auto;
     border-radius: 20px;
     padding: 50px;
-    overflow: scroll;
+    overflow: hidden;
 
     .question-text {
         font-size: 35px;
