made homepage more responsive

--- a/css/other/_variables.scss
+++ b/css/other/_variables.scss
@@ -11,4 +11,5 @@ $jet-color:#302B27;
 $platinum-color:#EAEAEA;
 $orangeYellowCrayola-color:#F2CD5D;
 $navBartext-fontsize:20px;
+$pinkCoral-color:  #FDB9A9;
 
