--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -1,6 +1,8 @@
 .contact-html {
     text-align: center;
     font-family: $quicksand-font;
+    background-color: $magnoliaWhite-color;
+
 }
 
 .msg-form {
