--- a/css/page/_home.scss
+++ b/css/page/_home.scss
@@ -9,29 +9,35 @@
     padding: 0px;
     box-sizing: border-box;
     overflow: hidden;
-    background-image: url("../images/Group 11.svg") ;
-    background-repeat: no-repeat;
-    background-position: right center;
-    background-attachment: fixed;
-    z-index: -100;
-    height: 100vh;
     font-family: $quicksand-font;
+    // background-color: $pinkCoral-color;
 
     .home-container {
         position: relative;
+        
     }
 
-    .text {
-        position: absolute;
-        margin-top: 300px;
-        margin-left: 40px;
+    .home-left {
+
         color: black;
         font-size: 35px;
+        position: absolute;
+        margin-left: 5%;
+        margin-left: auto;
+        margin-right: auto;
+ 
+
+
+        .text {
+            text-align: center;
+        }
 
         .button {
-            text-align: center;
+            // text-align: center;
             margin-top: 30px;
             background: none;
+            margin-left: auto;
+            margin-right: auto;
         }
         
         .btn {
@@ -82,6 +88,63 @@
 
 }
 
+@media (min-width: 1100px) {
+    .home-body {
+        background-image: url("../images/Group 11.svg") ;
+        background-repeat: no-repeat;
+        background-position: right center;
+        background-attachment: fixed;
+        z-index: -100;
+        height: 100vh;
+    }
+
+    .home-left {
+
+        margin-top: 300px;
+
+        .home-left-logo {
+            display: none;
+        }
+        .text{
+            margin-left: 50px;
+        }
+
+        .button {
+            text-align: center;
+        }
+
+    }
+
+}
+
+@media (max-width: 1100px) {
+    .home-body {
+        background-color: $pinkCoral-color;
+        overflow-y: visible;
+    }
+
+    .home-left{
+        margin-top: 200px;
+
+
+        .text {
+            text-align: center;
+            width: 100vw;
+        }
+
+        .home-left-logo {
+            width: 200px;
+
+        }
+
+    }
+    .button {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
 .header {
     // background-color: $orangeYellowCrayola-color;
     // background-color: #FDB9A9;
@@ -99,7 +162,7 @@
     list-style: none;
     overflow: hidden;
     // background-color:  $orangeYellowCrayola-color;
-    background-color: #FDB9A9;
+    background-color: $pinkCoral-color;
 }
 
 .header li a {
@@ -197,7 +260,7 @@
 }
 
 
-@media (min-width: 800px) {
+@media (min-width: 825px) {
     .header li {
         float: left;
         // margin: 50px;
@@ -216,20 +279,19 @@
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 825px) {
     .header .logo {
         display: none;
     }
 
     .home-body {
-        background-color: #FDB9A9;
+        background-color: $pinkCoral-color;
         background-image: none;
     }
 
 
-    .menu {
-        border-top: solid 2px white;
-        border-bottom: solid 2px white;
+    .header ul {
+        background-color: white;
     }
 
 }
