made changes to login page

--- a/css/page/_home.scss
+++ b/css/page/_home.scss
@@ -130,6 +130,7 @@
         .text {
             text-align: center;
             width: 100vw;
+            font-size: 20px;
         }
 
         .home-left-logo {
