--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -41,7 +41,7 @@
         padding-top: 10px;
         resize: none;
     }
-    #send-btn {
+    .send-btn {
         width: 150px;
         height: 40px;
         display: block;
