--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -4,7 +4,14 @@
     background-color: $magnoliaWhite-color;
 
 }
-
+// .contact-container {
+//     background-color: $polishedPine-color;
+//     width: 50%;
+//     margin-left: auto;
+//     margin-right: auto;
+//     border-radius: 15px;
+//     padding: 20px;
+// }
 .msg-form {
     display: inline-block;
     margin-left: auto;
