--- a/css/page/_profile.scss
+++ b/css/page/_profile.scss
@@ -23,6 +23,11 @@
     background: $jet-color;
   }
 
+.content{
+    margin-top:0;
+    
+}
+
 .sideNavBar {
     width: 60px;
     background-color: $orangeYellowCrayola-color;
@@ -39,41 +44,50 @@
     padding: 0px 10px;
     text-align: center;
     height: 270px;
-}
+   }
 
 .profileInfo {
     display: flex;
     flex-direction: row;
-}
+  }
 
 .profileImage {
-    width: 20%;
+    width: 30%;
 }
 
 .pfp {
     border-radius: 20px;
     width: 225px;
     border: solid $platinum-color;
+    border-radius:50%;
+    vertical-align: center;
+    padding:10px;
+    border:2px solid;
 }
 
 .aboutMe {
+    margin-bottom:30px;
     h1 {
         padding: 0;
-        margin: 5px;
-        font-size: 2.0em;
+        margin: 20px 5px 5px 5px;
+        font-size: 3.0em;
     }
 
     h3 {
         padding: 0;
-        margin: 5px;
+        margin: 10px 0;
+        font-size: 1.5em;
+        
+
     }
 
     span {
         font-weight: lighter;
     }
 
+    border-bottom: 1px solid;
     padding: 0 0 0 60px;
-    margin:20px;
+    margin: 60px 20px;
     word-wrap:break;
     width:60%;
     background-color:$magnoliaWhite-color;
@@ -127,12 +141,12 @@ svg {
 @media screen and (max-width: 800px) {
     .profileContent {
         width:90%;
+
         .profileImage{
             margin:0;
             padding:18px;
-            img{
-                border-radius:20px;     
-                         
+            .pfp{
+                border-radius:50%;
             }
         }
         .aboutMe {
@@ -169,8 +183,8 @@ svg {
                 display:block;
                 margin:10px auto;
                 width: 200px;
-
-    
+                border-radius:50%;
+                   
             }
         }
     .aboutMe {
@@ -192,14 +206,20 @@ svg {
         h3 {
             text-align: center;
             font-size: 20px;
+            margin-bottom:10px;
         }
 
     }}
 }
 
 .contentContainer {
+
     .Title {
         display: flex;
+        font-size: 1.5em;
+        
+    
+       
 
         p {
             font-family: $quicksand-font;
@@ -242,7 +262,7 @@ svg {
             border-radius: 20px;
             background-color: $magnoliaWhite-color;
             box-shadow: 0 2px 4px $platinum-color;
-            font-size:1.2em;
+            font-size:1.3em;
 
             p{
                 padding:5px 5px;
@@ -314,10 +334,14 @@ svg {
         width: 50%;
         // margin: 10px;
         padding: 10px;
+        font-size: 1.2em;
+
 
         // background-color: pink;
         .placement {
             display: flex;
+            font-size: 1.5em;
+
         }
     }
 
