--- a/css/styles.css
+++ b/css/styles.css
@@ -1347,6 +1347,10 @@
   background: #302B27;
 }
 
+.content {
+  margin-top: 0;
+}
+
 .sideNavBar {
   width: 60px;
   background-color: #F2CD5D;
@@ -1376,18 +1380,24 @@
 }
 
 .profileImage {
-  width: 20%;
+  width: 30%;
 }
 
 .pfp {
   border-radius: 20px;
   width: 225px;
   border: solid #EAEAEA;
+  border-radius: 50%;
+  vertical-align: center;
+  padding: 10px;
+  border: 2px solid;
 }
 
 .aboutMe {
+  margin-bottom: 30px;
+  border-bottom: 1px solid;
   padding: 0 0 0 60px;
-  margin: 20px;
+  margin: 60px 20px;
   word-wrap: break;
   width: 60%;
   background-color: #FFFAFF;
@@ -1397,13 +1407,14 @@
 
 .aboutMe h1 {
   padding: 0;
-  margin: 5px;
-  font-size: 2.0em;
+  margin: 20px 5px 5px 5px;
+  font-size: 3.0em;
 }
 
 .aboutMe h3 {
   padding: 0;
-  margin: 5px;
+  margin: 10px 0;
+  font-size: 1.5em;
 }
 
 .aboutMe span {
@@ -1458,8 +1469,8 @@ svg {
     margin: 0;
     padding: 18px;
   }
-  .profileContent .profileImage img {
-    border-radius: 20px;
+  .profileContent .profileImage .pfp {
+    border-radius: 50%;
   }
   .profileContent .aboutMe {
     padding: 0;
@@ -1495,6 +1506,7 @@ svg {
     display: block;
     margin: 10px auto;
     width: 200px;
+    border-radius: 50%;
   }
   .profileContent .aboutMe {
     width: 100%;
@@ -1516,6 +1528,7 @@ svg {
   .profileContent .aboutMe h3 {
     text-align: center;
     font-size: 20px;
+    margin-bottom: 10px;
   }
 }
 
@@ -1523,6 +1536,7 @@ svg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: 1.5em;
 }
 
 .contentContainer .Title p {
@@ -1570,7 +1584,7 @@ svg {
   background-color: #FFFAFF;
   -webkit-box-shadow: 0 2px 4px #EAEAEA;
           box-shadow: 0 2px 4px #EAEAEA;
-  font-size: 1.2em;
+  font-size: 1.3em;
 }
 
 .contentContainer .mostRecentThree .item p {
@@ -1641,12 +1655,14 @@ svg {
 .BottomContainer .itemB {
   width: 50%;
   padding: 10px;
+  font-size: 1.2em;
 }
 
 .BottomContainer .itemB .placement {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: 1.5em;
 }
 
 .BottomContainer .questionaireContainer,
