--- a/css/page/_profile.scss
+++ b/css/page/_profile.scss
@@ -367,282 +367,52 @@ svg {
     height: 2.5em;
 }
 
-@media screen and (max-width: 800px) {
-    .profileContent {
-        width: 90%;
 
-        .profileImage {
-            margin: 0;
-            padding: 18px;
+    // @media screen and (max-width: 800px) {
+    
 
-            .pfp {
-                border-radius: 50%;
-            }
-        }
-
-        .aboutMe {
-            padding: 0;
-            flex-direction: row;
-            margin-left: 90px;
-
-            h1 {
-                text-align: left;
-                font-size: 30px;
-                margin: 5px;
-            }
-
-            h3 {
-                text-align: left;
-                font-size: 20px;
-            }
-        }
-    }
-
-}
+    // }
 
 @media screen and (max-width: 600px) {
-
-    .profileContent {
-        .profileInfo {
-            flex-direction: column;
-            // margin:10px;
-            width: 100%;
-
-            .item {
-                width: 100%;
-            }
-
-            img {
-                display: block;
-                margin: 10px auto;
-                width: 200px;
-                border-radius: 50%;
-
-            }
-        }
-
-        .aboutMe {
-            width: 100%;
-            flex-direction: column;
-            text-align: center;
-            margin: 15px;
-
-            .item {
-                width: 100%;
-            }
-
-            h1 {
-                text-align: center;
-                font-size: 30px;
-                margin: 5px;
-            }
-
-            h3 {
-                text-align: center;
-                font-size: 20px;
-                margin-bottom: 10px;
-            }
-
-        }
+    .profileContent{
+        display:None;
     }
-}
-
-.contentContainer {
-
-    .Title {
-        display: flex;
-        font-size: 1.5em;
-
-
-
-
-        p {
-            font-family: $quicksand-font;
-            font-weight: bold;
-            background-color: $platinum-color;
-            padding: 10px 60px 10px 30px;
-            border-radius: 20px;
-            text-align: left;
-            position: absolute;
-            left: 130px;
-
+    .profileMobileView{
+        margin-left: 60px;
+        display:block;
+           
+        .media{
+            background-color:$maximumBluePurple-color;
+            width: fit-content;
+            padding:0 10px;
+            border-radius:20px;
+            text-align: center;
+            margin:10px auto;
         }
 
-        .item {
-            background-color: $platinum-color;
+        .pfp{
+            width:150px;
+        }
+        .linksIcon{
+            width:50px;
             border-radius: 50%;
         }
-
-        .titleIcon {
-            display: inline;
-            margin: 0;
-            width: 40px;
-        }
-
-
-    }
-
-    .mostRecentThree {
-        margin: 10px;
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        padding: 10px;
-        justify-content: space-around;
-        // background-color: aqua;
-
-        .item {
-            padding: 0;
-            border: solid 10px $magicMint-color;
+        .links{
+            background-color:$platinum-color;
+            padding:5px;
             border-radius: 20px;
-            background-color: $magnoliaWhite-color;
-            font-size: 1.3em;
-
-            p {
-                padding: 5px 5px;
-            }
-
         }
-
-
-    }
-
-    .item {
-        width: 40%;
-        padding: 20px;
-    }
-
-    @media screen and (max-width: 800px) {
-        .contentContainer {
-            .mostRecentThree {
-                flex-direction: row;
-
-            }
+        
+        h1{
+            text-align:center;
         }
-
-    }
-
-    @media screen and (max-width: 600px) {
-        .mostRecentThree {
-            width: 100%;
-            flex-direction: column;
-            text-align: center;
-            margin: 0;
-
-            .item {
-                width: 95%;
-            }
-
+        .item{
+            padding:10px;
+            margin: 10px auto;
         }
+        
+        
     }
+    
 }
 
-
-.BottomContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
-    img,
-    p {
-        display: inline-block;
-        width: 90%;
-
-    }
-
-    img {
-        width: 50px;
-        height: 50px;
-        float: left;
-    }
-
-    .qTitles {
-        background-color: $platinum-color;
-        border-radius: 20px;
-        padding: 10px 15px;
-        width: 90%;
-        text-align: center;
-
-    }
-
-    .itemB {
-        width: 50%;
-        // margin: 10px;
-        padding: 10px;
-        font-size: 1.2em;
-
-
-        // background-color: pink;
-        .placement {
-            display: flex;
-            font-size: 1.5em;
-
-        }
-    }
-
-    .questionaireContainer,
-    .socialMediaContainer {
-        box-shadow: 0 2px 2px $platinum-color;
-        width: 80%;
-        display: inline-block;
-        margin: 10px;
-        padding: 5px;
-    }
-
-    .questionaireContainer {
-        p {
-            border: 4px solid $blueJean-color;
-            border-radius: 20px;
-            width: 90%;
-            padding: 10px 5px;
-        }
-
-        overflow-y: scroll;
-        overflow-x: hidden;
-        height:500px;
-
-    }
-
-    .media {
-        border-radius: 20px;
-        background-color: $maximumBluePurple-color;
-        width: fit-content;
-        padding: 0 20px;
-        margin: 10px auto;
-    }
-
-}
-
-@media screen and (max-width: 800px) {
-    .BottomContainer {
-        flex-direction: row;
-    }
-
-}
-
-@media screen and (max-width: 600px) {
-    .BottomContainer {
-
-        flex-direction: column;
-        // margin-left: 30px;
-        margin-right: auto;
-
-        .socialMediaContainer {
-            width: 80%;
-            // padding:40px;
-        }
-
-        .hideQuestionaire {
-            display: none;
-        }
-
-        .qTitles {
-            width: 100%;
-        }
-
-        .itemB {
-            width: 100%;
-        }
-    }
-
-}
