--- a/css/styles.css
+++ b/css/styles.css
@@ -1799,269 +1799,42 @@ svg {
   height: 2.5em;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
   .profileContent {
-    width: 90%;
+    display: None;
   }
-  .profileContent .profileImage {
-    margin: 0;
-    padding: 18px;
-  }
-  .profileContent .profileImage .pfp {
-    border-radius: 50%;
-  }
-  .profileContent .aboutMe {
-    padding: 0;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    margin-left: 90px;
-  }
-  .profileContent .aboutMe h1 {
-    text-align: left;
-    font-size: 30px;
-    margin: 5px;
-  }
-  .profileContent .aboutMe h3 {
-    text-align: left;
-    font-size: 20px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .profileContent .profileInfo {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 100%;
-  }
-  .profileContent .profileInfo .item {
-    width: 100%;
-  }
-  .profileContent .profileInfo img {
+  .profileMobileView {
+    margin-left: 60px;
     display: block;
+  }
+  .profileMobileView .media {
+    background-color: #B4A0E5;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 0 10px;
+    border-radius: 20px;
+    text-align: center;
     margin: 10px auto;
-    width: 200px;
+  }
+  .profileMobileView .pfp {
+    width: 150px;
+  }
+  .profileMobileView .linksIcon {
+    width: 50px;
     border-radius: 50%;
   }
-  .profileContent .aboutMe {
-    width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+  .profileMobileView .links {
+    background-color: #EAEAEA;
+    padding: 5px;
+    border-radius: 20px;
+  }
+  .profileMobileView h1 {
     text-align: center;
-    margin: 15px;
   }
-  .profileContent .aboutMe .item {
-    width: 100%;
-  }
-  .profileContent .aboutMe h1 {
-    text-align: center;
-    font-size: 30px;
-    margin: 5px;
-  }
-  .profileContent .aboutMe h3 {
-    text-align: center;
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-}
-
-.contentContainer .Title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-size: 1.5em;
-}
-
-.contentContainer .Title p {
-  font-family: "Quicksand", sans-serif;
-  font-weight: bold;
-  background-color: #EAEAEA;
-  padding: 10px 60px 10px 30px;
-  border-radius: 20px;
-  text-align: left;
-  position: absolute;
-  left: 130px;
-}
-
-.contentContainer .Title .item {
-  background-color: #EAEAEA;
-  border-radius: 50%;
-}
-
-.contentContainer .Title .titleIcon {
-  display: inline;
-  margin: 0;
-  width: 40px;
-}
-
-.contentContainer .mostRecentThree {
-  margin: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 10px;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.contentContainer .mostRecentThree .item {
-  padding: 0;
-  border: solid 10px #8AE9C1;
-  border-radius: 20px;
-  background-color: #FFFAFF;
-  font-size: 1.3em;
-}
-
-.contentContainer .mostRecentThree .item p {
-  padding: 5px 5px;
-}
-
-.contentContainer .item {
-  width: 40%;
-  padding: 20px;
-}
-
-@media screen and (max-width: 800px) {
-  .contentContainer .contentContainer .mostRecentThree {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .contentContainer .mostRecentThree {
-    width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
-    margin: 0;
-  }
-  .contentContainer .mostRecentThree .item {
-    width: 95%;
-  }
-}
-
-.BottomContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.BottomContainer img,
-.BottomContainer p {
-  display: inline-block;
-  width: 90%;
-}
-
-.BottomContainer img {
-  width: 50px;
-  height: 50px;
-  float: left;
-}
-
-.BottomContainer .qTitles {
-  background-color: #EAEAEA;
-  border-radius: 20px;
-  padding: 10px 15px;
-  width: 90%;
-  text-align: center;
-}
-
-.BottomContainer .itemB {
-  width: 50%;
-  padding: 10px;
-  font-size: 1.2em;
-}
-
-.BottomContainer .itemB .placement {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-size: 1.5em;
-}
-
-.BottomContainer .questionaireContainer,
-.BottomContainer .socialMediaContainer {
-  -webkit-box-shadow: 0 2px 2px #EAEAEA;
-          box-shadow: 0 2px 2px #EAEAEA;
-  width: 80%;
-  display: inline-block;
-  margin: 10px;
-  padding: 5px;
-}
-
-.BottomContainer .questionaireContainer {
-  overflow-y: scroll;
-  overflow-x: hidden;
-  height: 500px;
-}
-
-.BottomContainer .questionaireContainer p {
-  border: 4px solid #55ACEE;
-  border-radius: 20px;
-  width: 90%;
-  padding: 10px 5px;
-}
-
-.BottomContainer .media {
-  border-radius: 20px;
-  background-color: #B4A0E5;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 0 20px;
-  margin: 10px auto;
-}
-
-@media screen and (max-width: 800px) {
-  .BottomContainer {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .BottomContainer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin-right: auto;
-  }
-  .BottomContainer .socialMediaContainer {
-    width: 80%;
-  }
-  .BottomContainer .hideQuestionaire {
-    display: none;
-  }
-  .BottomContainer .qTitles {
-    width: 100%;
-  }
-  .BottomContainer .itemB {
-    width: 100%;
+  .profileMobileView .item {
+    padding: 10px;
+    margin: 10px auto;
   }
 }
 
