--- a/css/page/_profile.scss
+++ b/css/page/_profile.scss
@@ -68,6 +68,10 @@
                 padding: 10px;
                 background-color: $magnoliaWhite-color;
                 border-radius: 20px;
+                p {
+                    text-align: center;
+                    font-size: 1.3em;
+                }
                 h1{
                     padding:0;
                 }
@@ -76,24 +80,20 @@
                 }
                
                 .pfp {
-                    width: 150px;
+                    width: 225px;
                     padding: 10px;
                     margin: 0;
                     border-radius: 50%;
                     border: solid 1px;
                 }
 
-                p {
-                    text-align: center;
-                }
+             
                 .Title {
-                    display: flex;
-                    flex-direction: row;
-                    
+                                     
 
                     .item {
                         padding: 0;
-                        margin: 0;
+                        margin: auto;
                         width: 60px;
                         height: 60px;
                     }
@@ -101,21 +101,20 @@
                     .links {
                         background-color: $platinum-color;
                         height: fit-content;
-                        padding: 0 30px 0 40px;
+                        padding: 10px 50px;
                         border-radius: 20px;
-                        margin-left: -30px;
-                        margin-top: 20px;
+                        font-size:1.3em;
+                        text-align: center;
+
                     }
+                    
 
                     .linksIcon {
                         background-color: $platinum-color;
                         border-radius: 50%;
-                        z-index: 1;
-                        // padding:10px;
-                        // vertical-align: center;
+                     
                     }
 
-                    vertical-align: center;
                 }
             }
         }
@@ -140,6 +139,7 @@
                 flex-direction: row;
                 margin: 10px;
                 width: 80%;
+                margin:auto;
                 .row {
                     display: flex;
                     flex-direction: row;
@@ -157,7 +157,7 @@
                 .item{
                     margin: 10px;
                     background-color:$platinum-color;
-                    width:100px;
+                    width:200px;
                     border-radius: 20px;
                 
                 }
@@ -242,6 +242,7 @@
                         width: 80%;
                         padding: 10px 5px;
                         font-size: 0.8em;
+                        margin:10px auto;
                     }
 
                     overflow-y: scroll;
@@ -389,7 +390,7 @@ svg {
         }
 
         .pfp{
-            width:150px;
+            width:120px;
         }
         .linksIcon{
             width:50px;
