--- a/css/page/_login.scss
+++ b/css/page/_login.scss
@@ -4,7 +4,9 @@
 .login-bg {
     background-image: url(../images/authentication.png);
     background-size: 50%;
-    background-position: right center;
+    // background-position: right;
+    background-repeat: no-repeat;
+    background-position: 50vw;
 }
 
 .login-body{
@@ -13,14 +15,14 @@
     font-family: $quicksand-font;
     color: white;
     background-color: $polishedPine-color;
-    width: 50%;
+    width: 40%;
     // margin-left: auto;
     // margin-right: auto;
     float: left;
     height: 70%;
     border-radius: 20px;
-    margin-top: 150px;
-    margin-left: 40px;
+    margin-top: 120px;
+    margin-left: 70px;
     padding: 10px;
 
     &__button{
